objects/vlocity_cmt__OverrideDefinition__c.object
<CustomObject>
    <description>Product override definitions identify an overriding product child item or attribute assignment. Most often used for commercial offers that override the child items and attributes defined by the underlying product spec.</description>
    <fields>
        <fullName>vlocity_cmt__CompiledAttributeOverrideId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the object that holds the full attribute override JSON for the Product Child Item</description>
        <label>Compiled Attribute Override</label>
        <referenceTo>vlocity_cmt__CompiledAttributeOverride__c</referenceTo>
        <relationshipName>OverrideDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Override Definitions</relationshipLabel>
        <relationshipName>Override_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsExclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Offer will exclude the Product Child Item or Attribute</description>
        <label>Is Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenAttributeAssignmentCategoryId__c</fullName>
        <formula>vlocity_cmt__OverriddenAttributeAssignmentId__r.vlocity_cmt__AttributeCategoryId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overridden Attribute Assignment Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenAttributeAssignmentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overridden Attribute Assignment</label>
        <referenceTo>vlocity_cmt__AttributeAssignment__c</referenceTo>
        <relationshipName>OverrideDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenOfferPricingComponentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED Overridden Pricing Component</label>
        <referenceTo>vlocity_cmt__OfferPricingComponent__c</referenceTo>
        <relationshipLabel>Override Definitions</relationshipLabel>
        <relationshipName>OverriddenOfferPricingComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenPriceListEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overridden Price List Entry</label>
        <referenceTo>vlocity_cmt__PriceListEntry__c</referenceTo>
        <relationshipLabel>Product Override Definitions</relationshipLabel>
        <relationshipName>OverrideDefinitionsOverriddenPLEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenPricingElementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED Overridden Pricing Element</label>
        <referenceTo>vlocity_cmt__PricingElement__c</referenceTo>
        <relationshipLabel>Override Definitions</relationshipLabel>
        <relationshipName>OverrideDefinitionsOverriddenElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overridden Product Child Item</label>
        <referenceTo>vlocity_cmt__ProductChildItem__c</referenceTo>
        <relationshipName>OverrideDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverriddenProductRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overridden ProductRelationship</label>
        <referenceTo>vlocity_cmt__ProductRelationship__c</referenceTo>
        <relationshipLabel>Override Definitions Overridden Product Relationship</relationshipLabel>
        <relationshipName>OverrideDefinitionsOverriddenProdRel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverrideType__c</fullName>
        <label>Override Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Definition</fullName>
                </value>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingAttributeAssignmentCategoryId__c</fullName>
        <formula>vlocity_cmt__OverridingAttributeAssignmentId__r.vlocity_cmt__AttributeCategoryId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overriding Attribute Assignment Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingAttributeAssignmentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overriding Attribute Assignment</label>
        <referenceTo>vlocity_cmt__AttributeAssignment__c</referenceTo>
        <relationshipName>OverrideDefinitionsOverriding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingOfferPricingComponentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED Overriding Pricing Component</label>
        <referenceTo>vlocity_cmt__OfferPricingComponent__c</referenceTo>
        <relationshipLabel>Override Definitions (Offer Pricing Component)</relationshipLabel>
        <relationshipName>OverridingOfferPricingComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingPriceListEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overriding Price List Entry</label>
        <referenceTo>vlocity_cmt__PriceListEntry__c</referenceTo>
        <relationshipLabel>Product Override Definitions (Overriding Price List Entry)</relationshipLabel>
        <relationshipName>OverrideDefinitionsOverridingPLEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingPricingElementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED Overriding Pricing Element</label>
        <referenceTo>vlocity_cmt__PricingElement__c</referenceTo>
        <relationshipLabel>Override Definitions (Overriding Pricing Element)</relationshipLabel>
        <relationshipName>OverrideDefinitionsOverridingElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overriding Product Child Item</label>
        <referenceTo>vlocity_cmt__ProductChildItem__c</referenceTo>
        <relationshipName>OverrideDefinitionsOverriding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverridingProductRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overriding Product Relationship</label>
        <referenceTo>vlocity_cmt__ProductRelationship__c</referenceTo>
        <relationshipLabel>Override Definitions Overriding Product Relationship</relationshipLabel>
        <relationshipName>OverrideDefinitionsOverridingProdRel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductGroupKey__c</fullName>
        <description>Version Group Key of Product</description>
        <formula>vlocity_cmt__ProductId__r.vlocity_cmt__GlobalGroupKey__c</formula>
        <inlineHelpText>Version Group Key of Product</inlineHelpText>
        <label>Product Group Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductHierarchyGlobalKeyPath__c</fullName>
        <description>This field is similar to Product Hierarchy Path but keeps global keys instead of Ids.</description>
        <label>Product Hierarchy Global Key Path</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductHierarchyGroupKeyPath__c</fullName>
        <description>Stores the resulting string obtained by replacing every Product Id in the Product Hierarchy Path with its Version Group key</description>
        <inlineHelpText>Stores the resulting string obtained by replacing every Product Id in the Product Hierarchy Path with its Version Group key</inlineHelpText>
        <label>Product Hierarchy Group Key Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductHierarchyPath__c</fullName>
        <externalId>true</externalId>
        <label>Product Hierarchy Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>OverrideDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipLabel>Override Definitions</relationshipLabel>
        <relationshipName>OverrideDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionItemGroupKey__c</fullName>
        <description>Global Group Key of Promotion Item</description>
        <formula>vlocity_cmt__PromotionItemId__r.vlocity_cmt__GlobalGroupKey__c</formula>
        <inlineHelpText>Global Group Key of Promotion Item</inlineHelpText>
        <label>Promotion Item Group Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Item</label>
        <referenceTo>vlocity_cmt__PromotionItem__c</referenceTo>
        <relationshipLabel>Product Override Definitions</relationshipLabel>
        <relationshipName>OverrideDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Override Definition</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Override Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Override Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>